- update: style fixes

--- a/todo-front/src/styles/components/_button.scss
+++ b/todo-front/src/styles/components/_button.scss
@@ -9,7 +9,7 @@
     padding: $s-size;
     text-decoration: none;
     margin: $m-size;
-
+    max-width: 11rem;
     .button-sm {
         font-size: $font-size-xsmall;
     }
