--- a/todo-front/src/styles/components/_list.scss
+++ b/todo-front/src/styles/components/_list.scss
@@ -20,7 +20,8 @@
     border-top: none;
     color: $dark-grey;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     padding: $s-size;
     text-decoration: none;
     transition: background .3s ease;
@@ -29,8 +30,6 @@
     }
     @media (min-width: $desktop-breakpoint) {
         align-items: center;
-        flex-direction: row;
-        justify-content: space-between;
         padding: $m-size;
     }
 }
@@ -39,6 +38,7 @@
     width: 100%;
     color: $dark-grey;
     text-decoration: none;
+    margin: auto;
     &:hover {
         background: $off-white;
     }
